# QtSpectrumNextRemote

./: CMakeLists.txt  NEX.cpp  NEX.h  QtSpectrumNextRemoteTask.cpp  QtSpectrumNextRemoteTask.h  README.md  RemoteCommand.h  SpectrumNextRemoteForm.cpp  SpectrumNextRemoteForm.h  SpectrumNextRemoteForm.ui  main-cli.cpp  main.cpp
